Work on HTML and CSS, the Structure

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     <h1>Memory Card Game</h1>
+    <main id="board">
+        <div class="square">🏀</div>
+        <div class="square">⚽️</div>
+        <div class="square">🏈</div>
+        <div class="square">⚾️</div>
+        <div class="square">🎾</div>
+        <div class="square">⛳️</div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </main>
+    <div class="results">
+        <div ""></div>
+    </div>
 </body>
 </html>
