Work on JS, implement shuffle array

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <h1>Memory Card Game</h1>
     <main id="board">
-        <div class="square">🏀</div>
-        <div class="square">⚽️</div>
-        <div class="square">🏈</div>
-        <div class="square">⚾️</div>
-        <div class="square">🎾</div>
-        <div class="square">⛳️</div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
@@ -24,7 +24,23 @@
         <div class="square"></div>
     </main>
     <div class="results">
-        <div ""></div>
+        <div class="top-results">
+            <div class="moves">
+                <div id="moves-num">0</div>
+                <div id="moves-text">Moves</div>
+            </div>
+            <div class="misses">
+                <div id="misses-num">0</div>
+                <div id="misses-text">Misses</div>
+            </div>
+            <div class="accuracy">
+                <div id="accuracy-num">0</div>
+                <div id="accuracy-text">Accuracy</div>
+            </div>
+        </div>
+        <div class="bottom-results">
+            <button>Play Again</button>
+        </div>
     </div>
 </body>
 </html>
