--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Memory Card Game</h1>
-    <main id="board">
+    <main id="board" class="grid-board">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
