--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    <h1>Memory Card Game</h1>
+    <h1>Memory Card Sports Game</h1>
     <main id="board" class="grid-board">
     </main>
     <div class="results">
