--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
                 <div id="accuracy-num">0</div>
                 <div id="accuracy-text">Accuracy</div>
             </div>
+            <div class="form-player-name">
+                <form class="new-player-name">
+                    <label for="player-input">Name:</label>
+                    <input type="text" id="player-input" required></input>
+                    <input type="submit" value="Add Name">
+                    <!-- <button id="submit-name" type="submit">submit name</button> -->
+                </form>
+            </div>
         </div>
         <div class="bottom-results">
-            <button>Play Again</button>
+            <button class="play-again-button">Play Again</button>
+            <div class="player-name-display"></div>
         </div>
     </div>
 </body>
