--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="pop-up-player-name">
         <form class="new-player-name">
+            <span class="close-new-player">&times;</span>
             <legend>New Player</legend>
             <label for="player-input">Name:</label>
             <input type="text" id="player-input" required></input>
