--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <div class="leadership-board">
             <span class="close">&times;</span>
             <div class="leadership-title">Leadership Board</div>
-            <div class="leadership-container"></div>
+            <!-- <div class="leadership-properties">
+
+            </div> -->
+            <div class="leadership-container">
+                <div>Name</div>
+                <div>Moves</div>
+                <div>Misses</div>
+                <div>Accuracy</div>
+                <div>Outcome</div>
+            </div>
         </div>
     </div>
     <div class="pop-up-player-name">
