Finish leadership Modal

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
         <div class="leadership-board">
             <span class="close">&times;</span>
             <div class="leadership-title">Leadership Board</div>
-            <!-- <div class="leadership-properties">
-
-            </div> -->
-            <div class="leadership-container">
+            <div class="leadership-properties">
                 <div>Name</div>
                 <div>Moves</div>
                 <div>Misses</div>
                 <div>Accuracy</div>
                 <div>Outcome</div>
             </div>
+            <div class="leadership-container"></div>
         </div>
     </div>
     <div class="pop-up-player-name">
