Work on top-results section

--- a/index.html
+++ b/index.html
@@ -36,18 +36,21 @@
     </div>
     <div class="results">
         <div class="top-results">
-            <div class="player-name-display"></div>
+            <div class="player-name-display">
+                <div class="p-name-title"></div>
+                <div class="p-name"></div>
+            </div>
             <div class="moves">
-                <div id="moves-num">0</div>
                 <div id="moves-text">Moves</div>
+                <div id="moves-num">0</div>
             </div>
             <div class="misses">
-                <div id="misses-num">0</div>
                 <div id="misses-text">Misses</div>
+                <div id="misses-num">0</div>
             </div>
             <div class="accuracy">
-                <div id="accuracy-num">0</div>
                 <div id="accuracy-text">Accuracy</div>
+                <div id="accuracy-num">0</div>
             </div>
         </div>
         <div class="bottom-results">
