Work on top-results section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="results">
         <div class="top-results">
             <div class="player-name-display">
-                <div class="p-name-title"></div>
-                <div class="p-name"></div>
+                <div class="p-name-title">Name</div>
+                <div class="p-name">Player</div>
             </div>
             <div class="moves">
                 <div id="moves-text">Moves</div>
@@ -54,9 +54,9 @@
             </div>
         </div>
         <div class="bottom-results">
-            <button class="play-again-button">Play Again</button>
             <button class="add-name-button">Add Name</button>
-            <button class="leadership-button">Leadership Board</button>
+            <button class="play-again-button">Play Again</button>
+            <button class="leadership-button">Leaders</button>
             
         </div>
     </div>
