Work on bottom-results section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="results">
         <div class="top-results">
             <div class="player-name-display">
-                <div class="p-name-title">Name</div>
-                <div class="p-name">Player</div>
+                <div class="p-name-title">Name:</div>
+                <div id="p-name"></div>
             </div>
             <div class="moves">
                 <div id="moves-text">Moves</div>
